--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Let data Flow!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest"
   },
   "author": "Roman Kvitkov",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "ts-jest": "^29.1.1"
+  }
 }
